<resources>
    <string name="app_name">Find Age</string>
    <string name="your_age_shows_here">Your age shows here</string>
    <string name="get_my_age">Get my Age</string>
    <string name="enter_dob_dd_mm_yyyy">Enter DOB(DD MM YYYY)</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="enter_your_own_date">Enter your own Date</string>
    <string name="age_at_the_date_of">Age at the date of</string>
</resources>