<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarThumbVertical="@android:drawable/btn_star_big_on"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appOutput"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:text="@string/your_age_shows_here"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/defappInput"
        app:layout_constraintVertical_bias="0.263" />

    <Button
        android:id="@+id/appButton"
        android:layout_width="121dp"
        android:layout_height="44dp"
        android:layout_marginTop="84dp"
        android:importantForAutofill="no"
        android:text="@string/get_my_age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.795"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appOutput" />

    <EditText
        android:id="@+id/appInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_dob_dd_mm_yyyy"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.825"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.142" />

    <TextView
        android:id="@+id/inputView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_birth"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/appInput"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.155" />

    <EditText
        android:id="@+id/defappInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_your_own_date"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.825"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appInput"
        app:layout_constraintVertical_bias="0.068" />

    <TextView
        android:id="@+id/defaultVieew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_at_the_date_of"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/defappInput"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputView"
        app:layout_constraintVertical_bias="0.102" />
</androidx.constraintlayout.widget.ConstraintLayout>